<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_background"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:id="@+id/svInputData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llMedSos"
        android:padding="8dp">

    <LinearLayout
            android:id="@+id/llInputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/iyaa" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/judul_activity_login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/purple_200"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_email_24" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edittextstyle1"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/purple_200"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_password_24" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edittextstyle1"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style1"
            android:drawableEnd="@drawable/ic_baseline_send_24"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/judul_daftar"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/linestyle"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_password" />
        </LinearLayout>

      </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llMedSos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_200"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/atau_login"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_icons8_linkedin" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_icons8_facebook" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_icons8_twitter" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>


